--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd-mobile": "^5.38.1",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
